force-app/main/default/objects/Corporate_Account__c/Corporate_Account__c.object-meta.xml
<CustomObject>
    <label>Corporate Account</label>
    <nameField>
        <label>Corporate Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>