force-app/main/default/objects/Corporate_Account__c/fields/Zip_Code_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Postal_Code__c</fullName>
    <label>Zip Code/Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>